Refactor caching logic and enhance search functionality.